c8-ingress-landing-page.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${UNAMESPACE}-ingress
  namespace: ${UNAMESPACE}
  labels:
    app: camunda-platform
    app.kubernetes.io/instance: ${UNAMESPACE}
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/part-of: camunda-platform
    helm.sh/chart: camunda-platform-12.0.0-alpha4  
  annotations:
    kubernetes.io/ingress.class: "nginx"
    meta.helm.sh/release-name: ${UNAMESPACE}
    meta.helm.sh/release-namespace: ${UNAMESPACE}
    kubernetes.io/ingress.allow-http: "false"  # on ingress, we only allow HTTPS. 
    #networking.gke.io/managed-certificates: c8-managed-cert # shift to cf origin cert
    networking.gke.io/backend-protocol: "HTTP"  # Tell GKE to use HTTP to backend
    #cloud.google.com/healthcheck-path: "/console"
spec:
  tls:
    - hosts:
        - ${UNAMESPACE}.makelabs.in
      secretName: cf-origin-cert
  ingressClassName: "nginx"
  rules:
    - host: ${UNAMESPACE}.makelabs.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-landing-page-service
                port:
                  number: 80
